swc/db/swc-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swc-db-service
  namespace: swc-app
  labels:
    app: swc-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: swc-db
