swc/db/swc-db-net-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: swc-db-net-policy
  namespace: swc-app
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          project: swc-app
    - podSelector:
        matchLabels:
          role: api
